--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,22 @@
 		gtag('config', 'UA-176593466-1');
 	</script>
 
+	<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-TX72MLZ');</script>
+		<!-- End Google Tag Manager -->
 
 	<!-- Primary Meta Tags -->
 	<title>DAX | Contact - Best Digital Marketing Agency </title>
 	<meta name="title" content="DAX | Contact - Best Digital Marketing Agency">
 	<meta name="description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
 			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
-	<meta name="keywords" content="Digital marketing,web development, app development,advertising, agency,graphic designing,kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course">
+
+	<meta name="keywords" content="Dax, DaxAds, Thedaxads, Digital marketing, web development, app development, advertising agency ,graphic designing, kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course, best digital marketing agency,online marketing,best digital marketing agency kannur,top 10 digital marketing agency,digital marketing & training,training center,digital courses,course,web courses,designing courses, contact,service,dax,kannur,dax kannur,kerala,arafa complex,arafa lodge,kerala,digital marketing">
+
 	<meta name="author" content="DAX - Best Digital Marketing Agency">
 	<meta name="robots" content= "index, follow">
 
@@ -58,6 +67,12 @@
 		<link href="assets/css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body class="preloader cursor-anim-enable landing-page">
+
+		<!-- Google Tag Manager (noscript) -->
+			 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TX72MLZ"
+			 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+
 		<!-- preloader-loading start -->
 		<div class="preloader__logoload-box">
 			<img class="preloader__logo" src="assets/images/logo/logo-white.png" alt="logo">
@@ -173,6 +188,13 @@
 						<div class="hidden-box d-inline-block">
 							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
+							</a>
+						</div>
+					</li>
+					<li class="list__item">
+						<div class="hidden-box d-inline-block">
+							<a href=""  target="_blank" class="anim-slide tr-delay-06 js-pointer-small">
+								<i class="fab fa-youtube"></i>
 							</a>
 						</div>
 					</li>
@@ -431,13 +453,16 @@
 									<a href="https://www.facebook.com/daxadsofficial" target="_blank" class="fill-btn text-color-979797 js-pointer-small" data-text="Facebook">Facebook</a>
 								</li>
 								<li class="list__item anim-fade tr-delay-01">
-									<a href="https://twitter.com/dax_ads" target="_blank"  class="fill-btn text-color-979797 js-pointer-small" data-text="Dribbble">twitter</a>
+									<a href="https://twitter.com/dax_ads" target="_blank"  class="fill-btn text-color-979797 js-pointer-small" data-text="Twitter">Twitter</a>
 								</li>
 								<li class="list__item anim-fade tr-delay-02">
 									<a href="https://www.instagram.com/dax_ads/?hl=en" target="_blank"  class="fill-btn text-color-979797 js-pointer-small" data-text="Instagram">Instagram</a>
 								</li>
 								<li class="list__item anim-fade tr-delay-03">
-									<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" target="_blank"  class="fill-btn text-color-979797 js-pointer-small" data-text="Youtube">linkedin</a>
+									<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" target="_blank"  class="fill-btn text-color-979797 js-pointer-small" data-text="linkedin">linkedin</a>
+								</li>
+								<li class="list__item anim-fade tr-delay-03">
+									<a href="" target="_blank"  class="fill-btn text-color-979797 js-pointer-small" data-text="Youtube">Youtube</a>
 								</li>
 								<!-- <li class="list__item anim-fade tr-delay-04">
 									<a href="#" class="fill-btn text-color-979797 js-pointer-small" data-text="Behance">Behance</a>
@@ -624,13 +649,16 @@
 							<a href="https://www.facebook.com/daxadsofficial"  target="_blank" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
 						</li>
 						<li class="list__item">
-							<a href="https://twitter.com/dax_ads"  target="_blank" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
+							<a href="https://twitter.com/dax_ads"  target="_blank" class="flip-btn js-pointer-small" data-text="Twitter">twitter</a>
 						</li>
 						<li class="list__item">
 							<a href="https://www.instagram.com/dax_ads/?hl=en"  target="_blank" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="linkedin">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in"  target="_blank" class="flip-btn js-pointer-small" data-text="Lnkedin">linkedin</a>
+						</li>
+						<li class="list__item">
+							<a href=""  target="_blank" class="flip-btn js-pointer-small" data-text="Youtube">Youtube</a>
 						</li>
 					</ul><!-- footer-social end -->
 
