.html added to graphic and digital marketing

--- a/academy.html
+++ b/academy.html
@@ -504,7 +504,7 @@
 											Choosing a career path is a daunting process. You’re supposed to find something you love while also factoring in things like long-term stability and supporting the overall lifestyle you want. A digital marketing career isn’t necessarily the dream job most people aspire to while they’re in school. But when you consider the opportunities in this dynamic field, you’ll see that the digital marketing career outlook is nothing but positive and will continue to be so in 2021...
 										</p>
 									</div>
-									<a href="digital-marketing" class="skew-btn js-pointer-large">
+									<a href="digital-marketing.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
@@ -530,7 +530,7 @@
 										<p class="body-text-s text-color-black margin-top-20">
 											Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great...</p>
 									</div>
-									<a href="#0" class="skew-btn js-pointer-large">
+									<a href="web-development.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
@@ -568,7 +568,7 @@
 										<p class="body-text-s text-color-black margin-top-20">
 										The graphic design plays an important role in today’s modern competitive global environment. The graphics designing has become an integral part of any business and occasion. For a customized website capable of providing all your need, the graphics arrangement on the website should be appropriate as well as look attractive and adorable. The graphic designing is important in almost every field that includes- marketing, magazine layout etc. A good graphic design should effectively communicate the message of the sender to the target audience using tools of visual communication.
 									</div>
-									<a href="graphic-design" class="skew-btn js-pointer-large">
+									<a href="graphic-design.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
