.htlm change for contact

--- a/about.html
+++ b/about.html
@@ -288,7 +288,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="contact.htlm" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="contact.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Contact">Contact</span>
 						</a>
 					</li><!-- nav-btn-box end -->
