web development few changes

--- a/web-development.html
+++ b/web-development.html
@@ -336,10 +336,13 @@
 							<div class="padding-top-90">
 								<div class="js-scrollanim">
 									<h2 class="headline-s hidden-box">
-										<span class="anim-slide">Why Web Development..?</span>
+										<span class="anim-slide">Career as a Web Developer</span>
 									</h2>
 									<p class="body-text-s margin-top-20 anim-text-reveal tr-delay-02">
-										Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience. Web developers, or 'devs', do this by using a variety of coding languages.
+										Web designing is an integral part of today's IT sector. Web designing is used for the creation and planning of websites. Generally speaking, web design is all about dealing with the development process of any website. From a career perspective, web design is a good option/opportunity for starting a career in the IT industry.
+	 Not only is the web development field exciting and on the forefront of the digital age, but it’s also a growing field. This guide will explain how to become a web developer, what skills and education are needed, different career paths, current market trends, and what people can expect as a web developer professional. 
+
+
 									</p>
 								</div>
 							</div><!-- wo we are end -->
@@ -354,37 +357,50 @@
 									<!-- accordion__tab start -->
 									<div class="accordion__tab js-accordion-tab">
 										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Module 1</h6>
+											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Module 1 : INTRODUCTION TO WEB DEVELOPMENT</h6>
 										</div>
 										<div class="accordion__content js-accordion-content">
-											<p class="body-text-xs">Pinterest lumbersexual forage chillwave godard pitchfork vexillologist deep v chia truffaut four dollar toast food truck meditation. Hot chicken coloring book cliche YOLO, crucifix kale chips swag hexagon raclette paleo next level austin.<br><br>Hammock sriracha paleo, iPhone swag af flexitarian hella pickled neutra pug. Trust fund chicharrones iPhone stumptown chia. Godard 3 wolf moon tacos try-hard, raw denim locavore messenger bag portland. Blue bottle hashtag schlitz etsy knausgaard, aesthetic tacos freegan lomo deep v fashion axe.</p>
+											<p class="body-text-xs">Web development refers in general to the tasks associated with developing websites for hosting via intranet or internet. The web development process includes web design, web content development, client-side/server-side scripting and network security configuration, among other tasks. </p>
+											<p class="body-text-xs">Web development is a broad description of the tasks and technologies that go into creating a website. It can be as simple as making a static text-based website or as elaborate as developing an interactive dynamic website. You can break web development into two different categories: </p>
+											<p class="body-text-xs"><b>* Frontend (client-side)</b></p> <p class="body-text-xs"><b>* Backend (server-side)</b></p>
+											<p class="body-text-xs">Frontend code executes on the user's computer. This can include HTML, JavaScript, and CSS. Backend code runs on the server — this commonly includes communicating with a database and often involves languages like Python, Ruby, Java, or PHP. Web development does not necessarily include the design process — it focuses on code. 
+												A web designer builds wireframes to mockup their vision for a website and then shares that with a developer. The developer is responsible for writing the code that implements the design.</p>
+										</div>				
+									</div><!-- accordion__tab end -->
+
+									<!-- accordion__tab start -->
+									<div class="accordion__tab js-accordion-tab">
+										<div class="accordion__btn js-accordion-btn js-pointer-large">
+											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">MODULE 2 : VERSION CONTROL SYSTEM</h6>
+										</div>
+										<div class="accordion__content js-accordion-content">
+											<p class="body-text-xs">Version control systems are a category of software tools that helps in recording changes made to files by keeping a track of modifications done to the code. </p>
+											<h4 class="accordion__btn-title headline-xxs margin-top-bottom-20">Contents of Module 2</h4>
+											<p class="body-text-xs"><b> * COMMAND LINE INTERFACE :</b>  Command line interface is a text based interface you can use to command your computer. Learn to navigate folder structures; create, move, delete files and folders. You need to know this well in order to use Git.</p>
+											<p class="body-text-xs"><b> * TRACK VERSION WITH GIT :</b>  Git is a version control system. It means that if you are editing a project, you can save a version of the project as snapshot. It is also very useful for managing projects with multiple contributors. You will understand the Git lifecycle, from initiation to committing changes.</p>
+											<p class="body-text-xs"><b> * CLOUD STORAGE WITH GITHUB : </b>Just like backing up your photos to Google drive or iCloud, developers back up their project to third party storage services like GitHub. GitHub is also a project management tool that offers issue tracking, code reviews, and project collaboration.</p>
 										</div>
 									</div><!-- accordion__tab end -->
 
 									<!-- accordion__tab start -->
 									<div class="accordion__tab js-accordion-tab">
 										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Module 2</h6>
+											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">MODULE 3 : BASICS OF HTML ,CSS & JS </h6>
 										</div>
 										<div class="accordion__content js-accordion-content">
-											<p class="body-text-xs">Pinterest lumbersexual forage chillwave godard pitchfork vexillologist deep v chia truffaut four dollar toast food truck meditation. Hot chicken coloring book cliche YOLO, crucifix kale chips swag hexagon raclette paleo next level austin.<br><br>Hammock sriracha paleo, iPhone swag af flexitarian hella pickled neutra pug. Trust fund chicharrones iPhone stumptown chia. Godard 3 wolf moon tacos try-hard, raw denim locavore messenger bag portland. Blue bottle hashtag schlitz etsy knausgaard, aesthetic tacos freegan lomo deep v fashion axe.</p>
+											<p class="body-text-xs">In this Module , You will learn how to write basic HTML, CSS and javascript. Install and use a code editor. Create and view a bare bone website locally on your computer.</p>
+											<h4 class="accordion__btn-title headline-xxs margin-top-bottom-20">Contents of Module 3</h4>
+											<p class="body-text-xs"><b> * HTML </b> </p><p class="body-text-xs"> HTML is the foundation of all web pages. Without HTML, you wouldn’t be able to organize text or add images or videos to your web pages. HTML is the beginning of everything you need to know to create engaging web pages! In this module, you will learn the basic tools that every web page coder needs to know. We will start from the ground up by learning how to implement modern web pages with HTML and all the common HTML tags used to structure HTML pages, the skeleton of all websites. </p>
+											<p class="body-text-xs"><b> * CSS </b> </p><p class="body-text-xs"> HTML and CSS go hand in hand for developing flexible, attractive, and user-friendly websites.In this module , we will learn about how CSS is used to style and lay out web pages — for example, to alter the font, colour, size and spacing of your content, split it into multiple columns, or add animations and other decorative features. This module gets you started on the path to css. </p>
+											<p class="body-text-xs"><b> * JAVASCRIPT  </b> </p><p class="body-text-xs">JavaScript is a loosely-typed client side scripting language that executes in the user's web browser. Aweb page without JavaScript is unimaginable today. There are many open source application development frameworks based on JavaScript.In this module we will learn about what is the JavaScript and benefits of the language. Students will learn how to use simple JavaScript Code that will liberate them from all of the minute, time-consuming details of creating JavaScript programs that run well across different browser platforms.</p>
+										
 										</div>
 									</div><!-- accordion__tab end -->
 
 									<!-- accordion__tab start -->
 									<div class="accordion__tab js-accordion-tab">
 										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Module 3</h6>
-										</div>
-										<div class="accordion__content js-accordion-content">
-											<p class="body-text-xs">Pinterest lumbersexual forage chillwave godard pitchfork vexillologist deep v chia truffaut four dollar toast food truck meditation. Hot chicken coloring book cliche YOLO, crucifix kale chips swag hexagon raclette paleo next level austin.<br><br>Hammock sriracha paleo, iPhone swag af flexitarian hella pickled neutra pug. Trust fund chicharrones iPhone stumptown chia. Godard 3 wolf moon tacos try-hard, raw denim locavore messenger bag portland. Blue bottle hashtag schlitz etsy knausgaard, aesthetic tacos freegan lomo deep v fashion axe.</p>
-										</div>
-									</div><!-- accordion__tab end -->
-
-									<!-- accordion__tab start -->
-									<div class="accordion__tab js-accordion-tab">
-										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Module 4</h6>
+											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">MODULE 4 :  INTRODUCTION TO BOOTSTRAP </h6>
 										</div>
 										<div class="accordion__content js-accordion-content">
 											<p class="body-text-xs">Pinterest lumbersexual forage chillwave godard pitchfork vexillologist deep v chia truffaut four dollar toast food truck meditation. Hot chicken coloring book cliche YOLO, crucifix kale chips swag hexagon raclette paleo next level austin.<br><br>Hammock sriracha paleo, iPhone swag af flexitarian hella pickled neutra pug. Trust fund chicharrones iPhone stumptown chia. Godard 3 wolf moon tacos try-hard, raw denim locavore messenger bag portland. Blue bottle hashtag schlitz etsy knausgaard, aesthetic tacos freegan lomo deep v fashion axe.</p>
