small Spelling mistakes in web dev

--- a/web-development.html
+++ b/web-development.html
@@ -407,7 +407,7 @@
 											<h4 class="accordion__btn-title headline-xxs margin-top-bottom-20">Contents of Module 4</h4>
 											<br> <p class="body-text-m"><b> * INSTALLATION </b> </p><p class="body-text-m"> There are multiple ways to add Bootstrap in a project. You will learn the pros and cons of each method. </p>
 											<br> <p class="body-text-m"><b> * RESPONSIVE GRID SYSTEM </b> </p><p class="body-text-m">you will learn how to change layout based on the screen size of the viewing device.</p>
-											<br> <p class="body-text-m"><b> * BOOTSTAP'S STYLE STANDARS  </b> </p><p class="body-text-m">you will gain good knowledge about bootstrap’s standardised set of styles for typography, colours, buttons, forms, tables, images and more..</p>
+											<br> <p class="body-text-m"><b> * BOOTSTAP'S STYLE STANDARDS  </b> </p><p class="body-text-m">you will gain good knowledge about bootstrap’s standardised set of styles for typography, colours, buttons, forms, tables, images and more..</p>
 											<br> <p class="body-text-m"><b> * RESPONSIVE CSS  </b> </p><p class="body-text-m"> You will learn how to write CSS that is effective only on specific screen width ranges. Knowing this will allow you to create custom responsive styles for web pages.</p>
 											<br> <p class="body-text-m"><b> * RESPONSIVE DEVELOPMENT WITH BROWSER DEVTOOL </b> </p><p class="body-text-m"> When working on responsive CSS, it would be useful to quickly view the result on screen sizes of different devices.  </p>
 											<br> <p class="body-text-m"><b> * RESPONSIVE WEBSITE CLONE  </b> </p><p class="body-text-m"> Equipped with Bootstrap 3, you will learn to build a responsive clone webpage. </p>
