--- a/web-development.html
+++ b/web-development.html
@@ -362,7 +362,7 @@
 										<div class="accordion__content js-accordion-content">
 											<p class="body-text-m">Web development refers in general to the tasks associated with developing websites for hosting via intranet or internet. The web development process includes web design, web content development, client-side/server-side scripting and network security configuration, among other tasks. </p>
 											<br> <p class="body-text-m">Web development is a broad description of the tasks and technologies that go into creating a website. It can be as simple as making a static text-based website or as elaborate as developing an interactive dynamic website. You can break web development into two different categories: </p>
-											<p class="body-text-m"><b>* Frontend (client-side)</b></p> <p class="body-text-m"><b>* Backend (server-side)</b></p> <br>
+											<br><p class="body-text-m"><b>* Frontend (client-side)</b></p> <p class="body-text-m"><b>* Backend (server-side)</b></p> <br>
 											<p class="body-text-m">Frontend code executes on the user's computer. This can include HTML, JavaScript, and CSS. Backend code runs on the server — this commonly includes communicating with a database and often involves languages like Python, Ruby, Java, or PHP. Web development does not necessarily include the design process — it focuses on code.
 												A web designer builds wireframes to mockup their vision for a website and then shares that with a developer. The developer is responsible for writing the code that implements the design.</p>
 										</div>
@@ -444,7 +444,7 @@
 													you will get to learn all about creating tables for storing databases,keys in tables  and every other functions related with tables. </p><br>
 											</div><!-- accordion__tab end -->
 
-									<!-- accordion__tab start -->
+									</div><!-- accordion__tab start -->
 									<div class="accordion__tab js-accordion-tab">
 										<div class="accordion__btn js-accordion-btn js-pointer-large">
 											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">MODULE 7 : SEARCH ENGINE OPTIMIZATION (SEO)</h6>
@@ -456,7 +456,7 @@
 												<p class="body-text-m">in this module  you will get to learn how to do SEO for your websites. Learn the 'Real' techniques in SEO that sends your site to the top. Learn the secrets of how to get Ranked No.1 on Google, Bing and Yahoo.. The whole process needs meticulous attention and time. Therefore, you will have to know about keyword search, Keyword stuffing, meta descriptions, slugs, and many other features of SEO. With practice, you can become a skilled SEO expert.</p><br>
 											</div><!-- accordion__tab end -->
 
-									<!-- accordion__tab start -->
+										</div><!-- accordion__tab start -->
 									<div class="accordion__tab js-accordion-tab">
 										<div class="accordion__btn js-accordion-btn js-pointer-large">
 											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">MODULE 8 : PROJECT	</h6>
@@ -465,7 +465,7 @@
 											<p class="body-text-m">To further solidify all the skills, you learned, you will come up with a simple website idea and build it out on your own . If you don’t know what to build, consider creating your personal portfolio page. Use a CSS framework and track your project with Git. </p><br>
 												</div><!-- accordion__tab end -->
 
-									<!-- accordion__tab start -->
+											</div><!-- accordion__tab start -->
 									<div class="accordion__tab js-accordion-tab">
 										<div class="accordion__btn js-accordion-btn js-pointer-large">
 											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">MODULE 9 : DEPLOYING </h6>
